main/default/objects/FollowUps__c/FollowUps__c.object-meta.xml
<CustomObject>
    <label>FollowUp</label>
    <nameField>
        <displayFormat>FUP-{000}</displayFormat>
        <label>FollowUps ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FollowUps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>