main/default/objects/FollowUps__c/fields/Carts__c.field-meta.xml
<CustomField>
    <fullName>Carts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carts</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Cart__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Cart__c</referenceTo>
    <relationshipLabel>FollowUps</relationshipLabel>
    <relationshipName>FollowUps</relationshipName>
    <type>Lookup</type>
</CustomField>