main/default/objects/FollowUps__c/fields/FollowUp_Medium__c.field-meta.xml
<CustomField>
    <fullName>FollowUp_Medium__c</fullName>
    <label>FollowUp Medium</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>