main/default/objects/FollowUps__c/fields/FollowUp_Status__c.field-meta.xml
<CustomField>
    <fullName>FollowUp_Status__c</fullName>
    <label>FollowUp Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>