main/default/objects/FollowUps__c/fields/FollowUp_Type__c.field-meta.xml
<CustomField>
    <fullName>FollowUp_Type__c</fullName>
    <label>FollowUp Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abandoned Cart</fullName>
            </value>
            <value>
                <fullName>Product Recommendations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>