main/default/objects/FollowUps__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>FollowUp_Status__c</columns>
    <columns>FollowUp_Type__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>