main/default/objects/FollowUps__c/listViews/FollowUps.listView-meta.xml
<ListView>
    <fullName>FollowUps</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>FollowUp_Type__c</columns>
    <columns>FollowUp_Status__c</columns>
    <columns>FollowUp_Medium__c</columns>
    <columns>FollowUp_Date__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Mine</filterScope>
    <label>FollowUps</label>
</ListView>